compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__bit_array_match_on_integer_over_js_limit.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub fn go(x: BitArray) {\n    let <<number:123>> = x\n    number\n}\n"
---
----- SOURCE CODE

pub fn go(x: BitArray) {
    let <<number:123>> = x
    number
}


----- WARNING
warning: Truncated bit array segment
  ┌─ /src/warning/wrn.gleam:3:18
  │
3 │     let <<number:123>> = x
  │                  ^^^

This segment is a 123-bit long int, but on the JavaScript target numbers
have at most 52 bits. It would be truncated to its first 52 bits.

Hint: Did you mean to use the `bytes` segment option?
