compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__bit_array_match_on_integer_over_js_limit_1.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub fn go(x: BitArray) {\n  case x {\n    <<n:size(53)>> -> n\n    _ -> 1\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x: BitArray) {
  case x {
    <<n:size(53)>> -> n
    _ -> 1
  }
}


----- WARNING
warning: Truncated bit array segment
  ┌─ /src/warning/wrn.gleam:4:7
  │
4 │     <<n:size(53)>> -> n
  │       ^^^^^^^^^^

This segment is a 53-bit long int, but on the JavaScript target numbers
have at most 52 bits. It would be truncated to its first 52 bits.

Hint: Did you mean to use the `bytes` segment option?
