compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__bit_array_truncated_segment.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub fn main() {\n  <<12:size(1)>>\n}\n"
---
----- SOURCE CODE

pub fn main() {
  <<12:size(1)>>
}


----- WARNING
warning: Truncated bit array segment
  ┌─ /src/warning/wrn.gleam:3:5
  │
3 │   <<12:size(1)>>
  │     ^^ You can safely replace this with 0

This segment is 1 bit long, but 12 doesn't fit in that many bits. It would
be truncated by taking its its first bit, resulting in the value 0.
